# devops-metrics

./: Dockerfile  README.md  entrypoint.sh  pipeline-metrics.py  pipeline_metrics.py  pyproject.toml  renovate.json  test_pipeline_metrics.py
.github/workflows/: dependabot.yml
